pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-319-lists.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 124
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/319-lists.md
---
• a
  • b

    c

• d
